# infra-evm-parachain

./: .dockerignore  Dockerfile  README.md  zombienet-config.toml
.github/workflows/: docker-build.yml  rust-build.yaml
docker/: Dockerfile  injected_infra-evm.Dockerfile
examples/contract-hello/: package.json
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  eth.rs  service.rs
node/src/rpc/: mod.rs
pallets/motion/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs  xcm_config.rs
runtime/src/weights/: mod.rs
utils/: README.md  evm-address.js  index.js  package.json  ss58-address.js
zombienet/: local-devl.toml
