[package]
name = "infra-evm"
version = "0.9.400"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/cumulus/"
edition = "2021"
build = "build.rs"

[dependencies]
async-trait = "0.1"
clap = { version = "4.2.3", features = ["derive", "deprecated"] }
futures = "0.3.25"
log = "0.4.17"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.160", features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }

# Local
frontier-parachain-runtime = { path = "../runtime" }

# Substrate
frame-benchmarking = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
frame-benchmarking-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
pallet-transaction-payment-rpc = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sc-basic-authorship = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sc-chain-spec = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sc-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sc-client-api = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sc-consensus = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sc-executor = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sc-network = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sc-network-common = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sc-network-sync = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sc-rpc = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sc-service = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sc-sysinfo = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sc-telemetry = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sc-tracing = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sc-transaction-pool = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sc-transaction-pool-api = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sp-api = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sp-block-builder = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sp-blockchain = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sp-consensus-aura = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sp-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sp-offchain = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sp-io = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sp-session = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sp-timestamp = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
sp-transaction-pool = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
substrate-frame-rpc-system = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
substrate-prometheus-endpoint = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }
try-runtime-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", optional = true, "branch" = "master" }

# Polkadot
infrablockspace-cli = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-primitives = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-service = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
xcm = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }

# Cumulus
cumulus-client-cli = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-client-consensus-aura = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-client-consensus-common = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-client-network = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-client-service = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-primitives-core = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-relay-chain-interface = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }

# Frontier
fc-cli = { git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master" }
fc-consensus = { git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master" }
fc-db = { git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master" }
fc-mapping-sync = { git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master" }
fc-rpc = { git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master", features = [ "rpc-binary-search-estimate" ] }
fc-rpc-core = { git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master" }
fp-dynamic-fee = { git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master" }
fp-evm = { git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master" }
fp-rpc = { git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master" }
fc-storage = { git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/InfraBlockchain/infra-substrate", "branch" = "master" }

[features]
default = []
runtime-benchmarks = [
	"try-runtime-cli/try-runtime",
	"frontier-parachain-runtime/runtime-benchmarks",
	"infrablockspace-cli/runtime-benchmarks",
]
try-runtime = [
	"try-runtime-cli/try-runtime",
	"frontier-parachain-runtime/try-runtime"
]
