[package]
authors = ["Anonymous"]
build = "build.rs"
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."
edition = "2021"
homepage = "https://substrate.io"
license = "Unlicense"
name = "infra-evm-parachain"
repository = "https://github.com/paritytech/cumulus/"
version = "1.0.0"

[dependencies]
codec = {package = "parity-scale-codec", version = "3.6.4"}
clap = { version = "4.3.24", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"]}
async-trait = "0.1"
color-print = "0.3.4"
jsonrpsee = { version = "0.16.2", features = ["server"] }
log = "0.4.17"
serde = {version = "1.0.186", features = ["derive"]}

# Local
infra-evm-runtime = {path = "../runtime"}

# Substrate
frame-benchmarking = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
frame-benchmarking-cli = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
pallet-transaction-payment-rpc = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sc-basic-authorship = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sc-chain-spec = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sc-cli = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sc-client-api = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sc-consensus = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sc-consensus-aura = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sc-executor = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sc-network = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sc-network-common = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sc-network-sync = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sc-offchain = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sc-rpc = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sc-service = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master", features = ["default"]}
sc-sysinfo = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sc-telemetry = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sc-tracing = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sc-transaction-pool = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sc-transaction-pool-api = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sp-api = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sp-block-builder = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sp-blockchain = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sp-consensus-aura = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sp-core = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sp-io = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sp-inherents = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sp-keystore = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sp-offchain = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sp-runtime = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sp-session = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sp-timestamp = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
sp-transaction-pool = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
substrate-frame-rpc-system = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
substrate-prometheus-endpoint = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
try-runtime-cli = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", optional = true, branch = "master"}

# Polkadot
infrablockchain-cli = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", features = ["infra-relay-native", "rococo-native"], branch = "master"}
primitives = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
infrablockchain-service = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
xcm = { package = "staging-xcm", git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false, branch = "master"}

# Cumulus
cumulus-client-cli = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
cumulus-client-collator = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
cumulus-client-consensus-aura = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
cumulus-client-consensus-proposer = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
cumulus-client-consensus-common = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
cumulus-client-network = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
cumulus-client-service = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
cumulus-primitives-core = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
cumulus-primitives-parachain-inherent = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}
cumulus-relay-chain-interface = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}

# Frontier
fc-api = {git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master"}
fc-cli = {git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master"}
fc-consensus = {git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master"}
fc-db = {git = "https://github.com/InfraBlockchain/infra-frontier", features = ["default", "sql"], branch = "master"}
fc-mapping-sync = {git = "https://github.com/InfraBlockchain/infra-frontier", features = ["sql"], branch = "master"}
fc-rpc = {git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master", features = ["rpc-binary-search-estimate", "txpool"]}
fc-rpc-core = {git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master"}
fc-storage = {git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master"}
fp-dynamic-fee = {git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master"}
fp-evm = {git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master"}
fp-rpc = {git = "https://github.com/InfraBlockchain/infra-frontier", branch = "master"}

[build-dependencies]
substrate-build-script-utils = {git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master"}

[features]
default = []
txpool = []
runtime-benchmarks = [
  "try-runtime-cli/try-runtime",
  "infra-evm-runtime/runtime-benchmarks",
  "infrablockchain-cli/runtime-benchmarks",
]
try-runtime = [
  "try-runtime-cli/try-runtime",
  "infra-evm-runtime/try-runtime",
]
